add basic planning steps for marking.
Signed-off-by: Marc Handalian <marc.handalian@gmail.com>